--- a/Courses/Seminars/DP/Spring18.html
+++ b/Courses/Seminars/DP/Spring18.html
@@ -12,7 +12,7 @@
 <h1><span style="FONT-SIZE: 26pt">Seminar on  Differential Privacy  </span>  </h1> 
 
 <br>
-<img alt="" height="334" src="dp.jpg" width="500"><br>
+<img src="DP.png" height="334"  width="500" class=update1><br>
                   
 <br>                                          
 
