--- a/Courses/Seminars/DP/Spring18.html
+++ b/Courses/Seminars/DP/Spring18.html
@@ -153,26 +153,18 @@ Will be published before before spring semester starts
 	</td>      
  </tr>
  
- <tr  style= "BACKGROUND: rgb(250,191,143) 0% 50%">
-   	<td> 8 </td> <td> 15/05 </td> <td> Amit Zohar </td> 
+ <tr  style= "BACKGROUND: rgb(255,0,0) 0% 50%">
+   	<td> </td> <td> 15/05 </td> <td> NO CLASS </td> <td> <span style= "color:#3300CC"></span>  <br> <i></i> </td>     
+ </tr>
+ 
+ <tr  style= "BACKGROUND: rgb(149,179,215) 0% 50%">
+   	<td> 9 </td> <td> 22/05 </td> <td> Amit Zohar  </td> 
 	<td> 
 	<div align="left">
 	<b>Exploiting low local sensitivity <br> <br>
 	<i>Chapters 7.1 & 7.2</i> 
 	<br>
 	Relevant talks:  [<a href="https://www.youtube.com/watch?v=EH6hac8qnX0" target="_blank">video</a>] 
-	</div>
-	</td>     
- </tr>
- 
- <tr  style= "BACKGROUND: rgb(149,179,215) 0% 50%">
-   	<td> 9 </td> <td> 22/05 </td> <td> Shlomi Shamir  </td> 
-	<td> 
-	<div align="left">
-	<b>Reconstruction attacks <br> <br>
-	<i>Chapter 8.1</i> 
-	<br>
-	Relevant talks:  [<a href="https://www.youtube.com/watch?v=5_lTDPYOUJw" target="_blank">video</a>] 
 	</div>
 	</td>     
  </tr>
