--- a/index.html
+++ b/index.html
@@ -719,7 +719,7 @@ random oracle model,  implying that protocols for computing these functionalitie
 <strong>Hardness Preserving Reductions via Cuckoo Hashing </strong><br> 
 <span class=abslide>[abstract]</span><br>
 TCC 2013 <a href="papers/Cuckoo/Cuckoo_TCC.pdf">[pdf]</a><br>
-Draft of full version <a href="papers/Cuckoo/Cuckoo%20.pdf">[pdf]</a></p>
+Journal of Cryptology 2018 <a href="https://link.springer.com/epdf/10.1007/s00145-018-9293-0?author_access_token=c4P7xpvpqm7goh9TUljAYPe4RwlQNchNByi7wbcMAY4KgJ-meQBx8p3c5wZzivcmpfRHQO3xMIsnG3eo1GHxG1Oi-h_0dfVnKu_FiwOm_opAixfsjkYujBfQlc5WSROov8UA7efCnyAQTtSyRs7YdA%3D%3D">[link]</a></p>
 
 <div class="box">
 A common method for increasing the usability and uplifting the security of pseudorandom function families (PRFs) is to “hash” the inputs into a
