--- a/index.html
+++ b/index.html
@@ -171,15 +171,16 @@ Complexity.<br></p>
 <b>Students</b><br>
 <ul>
 
-<li> Nissan Levi</li>
+<li> Matan Orland </li>
 <li> Noam Mazor</li>
-<li> Udi Peled</li>
+<li> Jad Silbak</li>
+<li> Eliad Tsfadia</li>
+
 
 </ul>
 
 <b>Postdocs</b><br>
 <ul>
-<li>   <a href="http://www.cs.tau.ac.il/~cohenran/">Ran Cohen</a></li>
 <li>   <a href="http://wicom.upf.edu/node/98">Nikolaos Makriyannis</a></li>
 </ul>
 <br>
@@ -187,10 +188,12 @@ Complexity.<br></p>
 <b>Past members</b><br>
 <ul>
 <li>   <a href="http://people.csail.mit.edu/itayberm/">Itay Berman</a> (Masters student, now Phd studetns at MIT)</li>
-<li>   Eliad Tsfadia (Masters student)</li>
 <li>   <a href="http://people.csail.mit.edu/itayberm/">Eran Omri</a> (Postdoc, now faculty at  Ariel University)</li>
 <li>   <a href="http://christinabrzuska.de/">Christina Brzuska</a> (Postdoc, now faculty at Hamburg University of Technology)</li>
 <li>   <a href="http://cs.nyu.edu/~tentes/Homepage.html">Aris Tentes</a> (longterm student visitor)</li>
+<li> Nissan Levi (Masters student)</li>
+<li>   <a href="http://people.csail.mit.edu/rancohen/">Ran Cohen (Postdoc, now Postdoc at MIT)</a></li>
+
 </ul>
 <br>
  </div>
@@ -266,6 +269,9 @@ The prizes are given for outstanding papers published in SIAM journals during th
 
 <b>Program Committees</b><br>
 <ul>
+
+
+<li> <a href="https://eurocrypt.iacr.org/2019/">Eurocrypt 2019</a></li>
 
 <li> <a href="https://tcc.iacr.org/2018/">Theory  of Cryptography Conference (TCC) 2018</a></li>
 
@@ -355,6 +361,36 @@ See the <a href="http://cpiis.cs.tau.ac.il/postdoc-fellowships-internships/">TAU
  <h1 style="margin-left : 30px ; margin-top : 0px">Publications   <span style="font-size :12px ; font-weight : 400">(in Reverse Chronological Order)</span></h1>
 
 <ul id=pub1>
+
+
+<li>
+Iftach Haitner and Nikolaos Makriyannis</a> and <a href="http://omrier.wix.com/eran-omri">Eran Omri</a> <br>
+<strong>On the Complexity of Fair Coin Flipping</strong>  <img src="new.png" class=update1><br>
+<span class=abslide>[abstract]</span> <br>
+Draft of full version  <a href="papers/CFtoKA/TwoPartyCoinFlipToKA.pdf">[pdf]</a><br><br>
+
+
+
+
+<div class="box">
+<p>
+In their breakthrough result, <span class=blu1> Moran, Naor, and Segev 
+
+[Journal of Cryptology '16]</span> show how to construct an <span class=blu2> r</span>-round-round two-party coin-flipping with bias
+ <span class=blu2> &Theta;(1/r)</span>. 
+ 
+This improves over the <span class=blu2> &Theta;(1/&radic;<span style="text-decoration:overline;">r</span>)</span>-bias protocol  of  <span class=blu1> Awerbuch, Blum, Chor, Goldwasser, and Micali [Manuscript '85]</span>, and matches the lower bound of <span class=blu1> Cleve [STOC '86]</span>. 
+The protocol of  <span class=blu1> Moran et. al</span>, however, uses oblivious transfer, to be compared with the protocol of <span class=blu1> Awerbuch et. al</span> that can be based on any one-way function. 
+An intriguing open question is whether oblivious transfer, or more generally "public-key primitives", is required for an <span class=blu2> o(1/r)</span>-bias coin flipping. This question was partially answered in the black-box settings by <span class=blu1> Dachman-Soled et al.
+[11] [TCC '11] and Dachman-Soled et al. [12] [TCC '14]</span>, who showed that restricted types of fully black-box reductions cannot established such <span class=blu2> o(1/r)</span>-bias coin-flipping protocol from one-way functions.
+
+<br><br>
+We make progress towards answering the above question, showing that for any (constant) <span class=blu2> r &isin; N</span>, the existence of an <span class=blu2>r</span>-round <span class=blu2>o(1/r)</span>-bias coin flipping protcol implies the existence of an infinitely-often key-agreement protocol. Our reduction is non black-box, and makes a novel use of the
+recent dichotomy for two-party protocols of <span class=blu1> Haitner et al. [ECCC '18]</span> to facilitate, for the two-party
+case, the recent attack of <span class=blu1>  Beimel et al [ECCC '17]</span> on multi-party coin-flipping protocols.
+</p>
+</div>
+</li>
 
 
 <li>
