--- a/index.html
+++ b/index.html
@@ -500,7 +500,7 @@ setup, and is in some sense non-black box.
 <li>
 <a href="https://www.cs.bgu.ac.il/~beimel/">Amos Beimel </a> and Iftach Haitner and Nikolaos Makriyannis</a> and <a href="http://omrier.wix.com/eran-omri">Eran Omri</a> <br>
 <strong>Tighter Bounds on Multi-Party Coin Flipping, via
-Augmented Weak Martingales and Dierentially Private Sampling</strong>  <img src="new.png" class=update1><br>
+Augmented Weak Martingales and Differentially Private Sampling</strong>  <img src="new.png" class=update1><br>
 <span class=abslide>[abstract]</span> <br>
 Draft of full version  <a href="papers/FairCoinLB/FairCoinLB.pdf">[pdf]</a><br><br>
 
