--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@ See the <a href="http://cpiis.cs.tau.ac.il/postdoc-fellowships-internships/">TAU
 
 <li>
 <a href="https://people.csail.mit.edu/rancohen/">Ran Cohen</a> and Iftach Haitner and Nikolaos Makriyannis and Matan Orland and <a href="http://www.cs.huji.ac.il/~salex/">Alex Samorodnitsky</a></a><br>
-<strong>Lower Bounds on Round Complexity of Randomized Byzantine Agreement Protocols</strong> <br>
+<strong>On the Round Complexity of Randomized Byzantine Agreement</strong> <br>
 <span class=abslide>[abstract]</span> <br><br>
 <!-- 
 TCC 2018<br>
@@ -399,7 +399,7 @@ Draft of full version  <a href="papers/CFtoKA/TwoPartyCoinFlipToKA.pdf">[pdf]</a
 
 <div class="box">
 <p>
-We study lowerbounds on the round complexity of <em>randomized</em> Byzantine agreement (BA) protocols, bounding the halting probability of such protocols after one and two rounds. In particular, we show that:<br><br>
+We present new  lower bounds on the round complexity of <em>randomized</em> Byzantine agreement (BA) protocols, bounding the halting probability of such protocols after one and two rounds. In particular, we prove that:<br><br>
 <ol>
 <li> BA protocols resilient against <span class=blu2>n/3</span> [resp., <span class=blu2>n/4</span>] corruptions terminate (under attack) at the end of the first round with probability at most <span class=blu2>o(1)</span> [resp., <span class=blu2>1/2 + o(1)</span>].</li>
 
