--- a/index.html
+++ b/index.html
@@ -387,8 +387,9 @@ See the <a href="http://cpiis.cs.tau.ac.il/postdoc-fellowships-internships/">TAU
 
 <li>
 <a href="https://people.csail.mit.edu/rancohen/">Ran Cohen</a> and Iftach Haitner and Nikolaos Makriyannis and Matan Orland and <a href="http://www.cs.huji.ac.il/~salex/">Alex Samorodnitsky</a></a><br>
-<strong>On the Round Complexity of Randomized Byzantine Agreement</strong> <br>
-<span class=abslide>[abstract]</span> <br><br>
+<strong>On the Round Complexity of Randomized Byzantine Agreement</strong> <img src="new.png" class=update1><br>
+<span class=abslide>[abstract]</span> <br>
+Manuscript 2019<br><br>
 <!-- 
 TCC 2018<br>
 Draft of full version  <a href="papers/CFtoKA/TwoPartyCoinFlipToKA.pdf">[pdf]</a><br><br>
@@ -426,6 +427,7 @@ Iftach Haitner and Noam Mazor and <a href="http://www.cs.haifa.ac.il/%7Eronen/">
 <strong>Channels of Small Log-Ratio Leakage and
 Characterization of Two-Party Differentially Private Computation</strong>  <img src="new.png" class=update1><br>
 <span class=abslide>[abstract]</span> <br>
+Manuscript 2019<br>
 Draft of full version  <a href="papers/LogRatioChannels/LogRatioChannels.pdf">[pdf]</a><br><br>
 
 <div class="box">
@@ -456,7 +458,7 @@ extends to functions (over many bits) that "contain" an "embedded copy" of the X
 <strong>A Tight Parallel-Repetition Theorem
 for Random-Terminating Interactive Arguments</strong>  <img src="new.png" class=update1><br>
 <span class=abslide>[abstract]</span> <br>
-Eurocrypt 2019<br>
+Manuscript 2019<br>
 Draft of full version  <a href="papers/TightPR/TightPR.pdf">[pdf]</a><br><br>
 
 <div class="box">
@@ -603,7 +605,7 @@ setup, and is in some sense non-black box.
 
 <li>
 <a href="https://www.cs.bgu.ac.il/~beimel/">Amos Beimel </a> and Iftach Haitner and Nikolaos Makriyannis</a> and <a href="http://omrier.wix.com/eran-omri">Eran Omri</a> <br>
-<strong>Tighter Bounds on Multi-Party Coin Flipping, via
+<strong>Tighter Bounds on Multi-Party Coin Flipping via
 Augmented Weak Martingales and Differentially Private Sampling</strong><br>
 <span class=abslide>[abstract]</span> <br>
 FOCS 2018<br>
@@ -638,7 +640,7 @@ uses a differentially private mechanism to minimize the effect of data divergenc
 <a href="https://people.csail.mit.edu/rancohen/">Ran Cohen</a> and Iftach Haitner and  <a href="http://omrier.wix.com/eran-omri">Eran Omri</a>  and Lior Rotem<br>
 <strong>﻿From Fairness to Full Security in Multiparty Computation</strong> <br>
 <span class=abslide>[abstract]</span><br>
-SCN 2018<br>
+SCN 2018  <a  href="https://link.springer.com/chapter/10.1007/978-3-319-98113-0_12">[link]</a><br>
 </p>
 
 
@@ -714,11 +716,11 @@ This tutorial discusses  two rather recent computational notions  of entropy, bo
 <a href="http://www.tau.ac.il/~nivb/">Niv Buchbinder</a>  and Iftach Haitner and Nissan Levi and Eliad Tsfadia <br>
 <strong>Fair Coin Flipping: Tighter Analysis and the Many-Party Case</strong> <br>
 <span class=abslide>[abstract]</span>  <!-- <a href="papers/3PartyCF/ManyPartySeminar.ppsx">[slides]</a> --> <br>
-SODA 2017 <a href="papers/3PartyCF/ManyPartyCF_SODA.pdf">[pdf]</a><br>
-<!-- Draft of dull version <a href="papers/3PartyCF/ManyParty_Full.pdf">[pdf]</a> <img src="up.png" class=update1> -->
+SODA 2017 <br>
+Draft of full version <a href="papers/3PartyCF/ManyPartyCF_Full.pdf">[pdf]</a> 
 
 
-
+<!-- <img src="up.png" class=update1>  -->
 <div class="box">
 <p>
 In a multi-party  fair coin-flipping protocol, the parties output a common (close to) unbiased  bit, even when some corrupted parties try to bias the output. 
