--- a/index.html
+++ b/index.html
@@ -277,6 +277,11 @@ The prizes are given for outstanding papers published in SIAM journals during th
  <div class="pro top">
 <h2>Professional Activity</h2>
 
+<b>Editor</b><br>
+<ul>
+<li> <a href="https://www.siam.org/Publications/Journals/SIAM-Journal-on-Computing-SICOMP/editorial-board">SIAM Journal on Computing (SICOMP)</a></li>
+</ul>
+
 <b>Program Committees</b><br>
 <ul>
 
