--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@ Complexity.<br></p>
 <ul>
 <li>   <a href="http://people.csail.mit.edu/itayberm/">Itay Berman</a> (Masters student, now Phd studetns at MIT)</li>
 <li>   <a href="http://people.csail.mit.edu/itayberm/">Eran Omri</a> (Postdoc, now faculty at  Ariel University)</li>
-<li>   <a href="http://christinabrzuska.de/">Christina Brzuska</a> (Postdoc, now faculty at Hamburg University of Technology)</li>
+<li>   <a href="http://chrisbrzuska.de/">Christopher Brzuska</a> (Postdoc, now faculty at Hamburg University of Technology)</li>
 <li>   <a href="http://cs.nyu.edu/~tentes/Homepage.html">Aris Tentes</a> (longterm student visitor)</li>
 <li> Nissan Levi (Masters student)</li>
 <li>   <a href="http://people.csail.mit.edu/rancohen/">Ran Cohen (Postdoc, now Postdoc at MIT)</a></li>
@@ -260,6 +260,7 @@ The prizes are given for outstanding papers published in SIAM journals during th
 
 <b>Grants</b><br>
 <ul>
+<li>[2019-20123 Israel  Science Foundation (ISF) -- Individual research grant. </li>
 <li>[2015-2020] European Research Council (ERC) Starting Grant  -- Individual research grant. </li>
 <li>[2011-2015] Israel  Science Foundation (ISF) -- Individual research grant. </li>
 <li>[2011-2015] Israel Science Foundation (ISF) -- Equipment for new faculty. </li>
@@ -361,6 +362,11 @@ The prizes are given for outstanding papers published in SIAM journals during th
     <li><a href="http://www.cs.tau.ac.il/%7Eiftachh/Courses/Seminars/ZK/Spring16.html"> Zero Knowledge Proofs (student seminar)&nbsp; (Spring 16)</a></li>
 
   <li><a href="http://www.cs.tau.ac.il/%7Eiftachh/Courses/Seminars/AvgHardness/Spring15.html"> Average-Case Hardness (student seminar)&nbsp; (Spring 15)</a></li>
+ 
+ <br><br>
+  
+   <li><a href="https://groups.google.com/forum/#!forum/foc-at-tau"> Advanced Cryptography seminar (by invitation only).&nbsp; Thursdays 13-15, Room 480</a></li>
+
   </ul></div>
  
  
