--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@ See the <a href="http://cpiis.cs.tau.ac.il/postdoc-fellowships-internships/">TAU
 <a href="https://people.csail.mit.edu/rancohen/">Ran Cohen</a> and Iftach Haitner and Nikolaos Makriyannis and Matan Orland and <a href="http://www.cs.huji.ac.il/~salex/">Alex Samorodnitsky</a></a><br>
 <strong>On the Round Complexity of Randomized Byzantine Agreement</strong> <img src="new.png" class=update1><br>
 <span class=abslide>[abstract]</span> <br>
-Manuscript 2019<br><br>
+DISC  2019<br><br>
 <!-- 
 TCC 2018<br>
 Draft of full version  <a href="papers/CFtoKA/TwoPartyCoinFlipToKA.pdf">[pdf]</a><br><br>
