--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@ Complexity.<br></p>
 
 <div class="info top">
 <h2>Contact Information</h2>
-Tel Aviv university, Schreiber Building, Office 020<br>
+Tel Aviv university, Check Point Building, Office 444 (forth floor)<br>
 Phone:+972-3-6407996<br>
 Fax: +972-3-6409373<br>
 Email: iftachh [at] tau.ac.il<br>
@@ -400,11 +400,9 @@ See the <a href="http://cpiis.cs.tau.ac.il/postdoc-fellowships-internships/">TAU
 <a href="https://people.csail.mit.edu/rancohen/">Ran Cohen</a> and Iftach Haitner and Nikolaos Makriyannis and Matan Orland and <a href="http://www.cs.huji.ac.il/~salex/">Alex Samorodnitsky</a></a><br>
 <strong>On the Round Complexity of Randomized Byzantine Agreement</strong> <img src="new.png" class=update1><br>
 <span class=abslide>[abstract]</span> <br>
-DISC  2019<br><br>
-<!-- 
-TCC 2018<br>
-Draft of full version  <a href="papers/CFtoKA/TwoPartyCoinFlipToKA.pdf">[pdf]</a><br><br>
- -->
+DISC  2019<br>
+Draft of full version  <a href="papers/ByzAgmntLB/BA_Full.pdf">[pdf]</a><br><br>
+
 
 
 
