--- a/index.html
+++ b/index.html
@@ -337,15 +337,19 @@ The prizes are given for outstanding papers published in SIAM journals during th
 <h2> Teaching  </h2>
 <ul>
 
+<li><a href="https://moodle.tau.ac.il/course/view.php?id=368448601"> Applications of Information Theory&nbsp; (Fall 19)</a></li>
+
+<li><a href="https://moodle.tau.ac.il/course/view.php?id=368415201"> Zero Knowledge Proofs (student seminar)&nbsp; (Fall 19)</a></li>
+
+<li><a href="http://moodle.tau.ac.il/course/view.php?id=368220001">Computational Models (Fall 19)</a></li>
+
 <li><a  href="http://moodle.tau.ac.il/2018/course/view.php?id=368416201">Foundation  of Cryptography, the Basics (Spring 19)</a></li>
 
 
-<li><a href="http://moodle.tau.ac.il/course/view.php?id=368220001">Computational Models (Fall 18)</a></li>
 
  <li><a href="http://moodle.tau.ac.il/course/view.php?id=368419701"> Seminar on pseudorandomness (student seminar)&nbsp; (Fall 18)</a></li>
 
 
-<li><a href="http://www.cs.tau.ac.il/%7Eiftachh/Courses/Info/Spring18/index.html"> Applications of Information Theory&nbsp; (Spring 18)</a></li>
 	
  <li><a href="http://www.cs.tau.ac.il/%7Eiftachh/Courses/Seminars/DP/Spring18.html"> Seminar on Differential Privacy (student seminar)&nbsp; (Spring 18)</a></li>
 
@@ -359,7 +363,7 @@ The prizes are given for outstanding papers published in SIAM journals during th
   
 
 
-    <li><a href="http://www.cs.tau.ac.il/%7Eiftachh/Courses/Seminars/ZK/Spring16.html"> Zero Knowledge Proofs (student seminar)&nbsp; (Spring 16)</a></li>
+    
 
   <li><a href="http://www.cs.tau.ac.il/%7Eiftachh/Courses/Seminars/AvgHardness/Spring15.html"> Average-Case Hardness (student seminar)&nbsp; (Spring 15)</a></li>
  
