--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@ Iftach Haitner and Noam Mazor and <a href="http://www.cs.haifa.ac.il/%7Eronen/">
 <strong>Channels of Small Log-Ratio Leakage and
 Characterization of Two-Party Differentially Private Computation</strong>  <img src="new.png" class=update1><br>
 <span class=abslide>[abstract]</span> <br>
-Manuscript 2019<br>
+TCC 2019<br>
 Draft of full version  <a href="papers/LogRatioChannels/LogRatioChannels.pdf">[pdf]</a><br><br>
 
 <div class="box">
