--- a/index.html
+++ b/index.html
@@ -147,15 +147,14 @@ d.addEventListener ? d.addEventListener("click",_gaLt,!1) : d.attachEvent && d.a
 <div id=wrapall>
   <div id=topwrap style="padding-left : 40px">
 <h1>Iftach Haitner - <span style="font-size : 125%"> יפתח הייטנר</span> </h1>
+
 <div   alt="" class="backup shadow2" id="iftach_pic"></div>
 <p style="font-size : 110%"> I am a faculty member at the <a href="https://en.cs.tau.ac.il/computer">School of Computer Science</a>
 at <a href="http://www.tau.ac.il">Tel Aviv University</a>.
-I am a part of the <a href="http://www.cs.tau.ac.il/~theory/">Theory of Computation Group</a> at TAU, and a member at the <a href="http://www.icore-algo.org.il/">Israeli
-Center of Research Excellence in Algorithms (ICORE)</a> and the <a href="http://cpiis.cs.tau.ac.il/">Check Point Institute for
-Information Security</a>.<br><br>
+I am the chair of the  <a href="http://cpiis.cs.tau.ac.il/">Check Point Institute for
+Information Security</a> and a member of the <a href="http://www.cs.tau.ac.il/~theory/">Theory of Computation Group</a>.<br><br>
 My main research interests are Cryptography and Computational
 Complexity.<br></p>
-
 
 <span class=boxtop id=info>[Info]</span>
 <span class=boxtop id=bio>[Short Bio]</span>
@@ -171,28 +170,35 @@ Complexity.<br></p>
 <b>Students</b><br>
 <ul>
 
-<li> Matan Orland </li>
-<li> Noam Mazor</li>
-<li> Jad Silbak</li>
-<li> Eliad Tsfadia</li>
+<li> Eliad Tsfadia (PhD)</li>
+<li> Noam Mazor (PhD)</li>
+<li> Jad Silbak (PhD) </li>
+<li> Dror Chawin (MsC)</li>
+<li> Yonatan Karidi-Heller (MsC)</li>
+
 
 
 </ul>
 
+<!---
 <b>Postdocs</b><br>
 <ul>
 <li>   <a href="http://wicom.upf.edu/node/98">Nikolaos Makriyannis</a></li>
 </ul>
 <br>
 
+--!>
+
 <b>Past members</b><br>
 <ul>
-<li>   <a href="http://people.csail.mit.edu/itayberm/">Itay Berman</a> (Masters student, now Phd studetns at MIT)</li>
-<li>   <a href="http://people.csail.mit.edu/itayberm/">Eran Omri</a> (Postdoc, now faculty at  Ariel University)</li>
-<li>   <a href="http://chrisbrzuska.de/">Christopher Brzuska</a> (Postdoc, now faculty at Hamburg University of Technology)</li>
+<li>   <a href="http://people.csail.mit.edu/itayberm/">Itay Berman</a> (MsC student)</li>
+<li>   <a href="http://people.csail.mit.edu/itayberm/">Eran Omri</a> (Postdoc)</li>
+<li>   <a href="http://chrisbrzuska.de/">Christopher Brzuska</a> (Postdoc)</li>
 <li>   <a href="http://cs.nyu.edu/~tentes/Homepage.html">Aris Tentes</a> (longterm student visitor)</li>
-<li> Nissan Levi (Masters student)</li>
-<li>   <a href="http://people.csail.mit.edu/rancohen/">Ran Cohen (Postdoc, now Postdoc at MIT)</a></li>
+<li> Nissan Levi (MsC student)</li>
+<li>   <a href="http://people.csail.mit.edu/rancohen/">Ran Cohen (Postdoc)</a></li>
+<li> Matan Orland (MsC student)</li>
+<li>   <a href="http://wicom.upf.edu/node/98">Nikolaos Makriyannis (Postdoc)</a></li>
 
 </ul>
 <br>
@@ -214,9 +220,8 @@ Mail: Iftach Haitner, Tel Aviv university, P.O.B. 39040, Ramat Aviv, Tel Aviv 69
 <h2>Short Biography </h2>
 I am a faculty  member of the <a href="http://www.cs.tau.ac.il">School of Computer Science</a>
 at <a href="http://www.tau.ac.il">Tel Aviv University</a>.<br>
-I am a member at the <a href="http://www.icore-algo.org.il/">Israeli
-Center of Research Excellence in Algorithms (ICORE)</a> and the <a href="http://cpiis.cs.tau.ac.il/">Check Point Institute for
-Information Security</a>.<br>
+I am the chair of the  <a href="http://cpiis.cs.tau.ac.il/">Check Point Institute for
+Information Security</a> and a member of the <a href="http://www.cs.tau.ac.il/~theory/">Theory of Computation Group</a>.<br>
 Until July 2010, I was a postdoctoral researcher at <a href="http://research.microsoft.com/en-us/labs/newengland/">Microsoft
 Research New England</a>. Prior to the time at Microsoft
 Research, I did a six months postdoc at <a href="http://www.cs.haifa.ac.il/"><font>Department of
@@ -260,8 +265,9 @@ The prizes are given for outstanding papers published in SIAM journals during th
 
 <b>Grants</b><br>
 <ul>
-<li>[2019-20123 Israel  Science Foundation (ISF) -- Individual research grant. </li>
+<li>[2019-2023] Israel  Science Foundation (ISF) -- Individual research grant. </li>
 <li>[2015-2020] European Research Council (ERC) Starting Grant  -- Individual research grant. </li>
+<li>[2015-2018] Blavatnik ICRC (Interdisciplinary Cyber Research) -- Group grant. </li>
 <li>[2011-2015] Israel  Science Foundation (ISF) -- Individual research grant. </li>
 <li>[2011-2015] Israel Science Foundation (ISF) -- Equipment for new faculty. </li>
 <li>[2011-2015] Israel Science Foundation(ISF) -- Israeli Center of Research Excellence in Algorithms. </li>
