--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ d.addEventListener ? d.addEventListener("click",_gaLt,!1) : d.attachEvent && d.a
 <div   alt="" class="backup shadow2" id="iftach_pic"></div>
 <p style="font-size : 110%"> I am a faculty member at the <a href="https://en.cs.tau.ac.il/computer">School of Computer Science</a>
 at <a href="http://www.tau.ac.il">Tel Aviv University</a>.
-I am the chair of the  <a href="http://cpiis.cs.tau.ac.il/">Check Point Institute for
+I am the director of the  <a href="http://cpiis.cs.tau.ac.il/">Check Point Institute for
 Information Security</a> and a member of the <a href="http://www.cs.tau.ac.il/~theory/">Theory of Computation Group</a>.<br><br>
 My main research interests are Cryptography and Computational
 Complexity.<br></p>
@@ -220,7 +220,7 @@ Mail: Iftach Haitner, Tel Aviv university, P.O.B. 39040, Ramat Aviv, Tel Aviv 69
 <h2>Short Biography </h2>
 I am a faculty  member of the <a href="http://www.cs.tau.ac.il">School of Computer Science</a>
 at <a href="http://www.tau.ac.il">Tel Aviv University</a>.<br>
-I am the chair of the  <a href="http://cpiis.cs.tau.ac.il/">Check Point Institute for
+I am the director of the  <a href="http://cpiis.cs.tau.ac.il/">Check Point Institute for
 Information Security</a> and a member of the <a href="http://www.cs.tau.ac.il/~theory/">Theory of Computation Group</a>.<br>
 Until July 2010, I was a postdoctoral researcher at <a href="http://research.microsoft.com/en-us/labs/newengland/">Microsoft
 Research New England</a>. Prior to the time at Microsoft
