--- a/index.html
+++ b/index.html
@@ -173,8 +173,8 @@ Complexity.<br></p>
 <li> Eliad Tsfadia (PhD)</li>
 <li> Noam Mazor (PhD)</li>
 <li> Jad Silbak (PhD) </li>
-<li> Dror Chawin (MsC)</li>
-<li> Yonatan Karidi-Heller (MsC)</li>
+<li> Dror Chawin (MSc)</li>
+<li> Yonatan Karidi-Heller (MSc)</li>
 
 
 
@@ -191,13 +191,13 @@ Complexity.<br></p>
 
 <b>Past members</b><br>
 <ul>
-<li>   <a href="http://people.csail.mit.edu/itayberm/">Itay Berman</a> (MsC student)</li>
+<li>   <a href="http://people.csail.mit.edu/itayberm/">Itay Berman</a> (MSc)</li>
 <li>   <a href="http://people.csail.mit.edu/itayberm/">Eran Omri</a> (Postdoc)</li>
 <li>   <a href="http://chrisbrzuska.de/">Christopher Brzuska</a> (Postdoc)</li>
 <li>   <a href="http://cs.nyu.edu/~tentes/Homepage.html">Aris Tentes</a> (longterm student visitor)</li>
-<li> Nissan Levi (MsC student)</li>
+<li> Nissan Levi (MSc student)</li>
 <li>   <a href="http://people.csail.mit.edu/rancohen/">Ran Cohen (Postdoc)</a></li>
-<li> Matan Orland (MsC student)</li>
+<li> Matan Orland (MSc student)</li>
 <li>   <a href="http://wicom.upf.edu/node/98">Nikolaos Makriyannis (Postdoc)</a></li>
 
 </ul>
