--- a/index.html
+++ b/index.html
@@ -293,6 +293,10 @@ The prizes are given for outstanding papers published in SIAM journals during th
 <ul>
 
 
+
+<li> <a href="https://itcrypto.github.io/2020.html">Conference on Information-Theoretic Cryptography (ITC) 2020</a></li>
+
+
 <li> <a href="https://eurocrypt.iacr.org/2019/">Eurocrypt 2019</a></li>
 
 <li> <a href="https://tcc.iacr.org/2018/">Theory  of Cryptography Conference (TCC) 2018</a></li>
