--- a/index.html
+++ b/index.html
@@ -347,17 +347,17 @@ The prizes are given for outstanding papers published in SIAM journals during th
 <h2> Teaching  </h2>
 <ul>
 
-<li><a href="https://moodle.tau.ac.il/course/view.php?id=368448601"> Applications of Information Theory&nbsp; (Fall 19)</a></li>
+<li><a href="https://moodle.tau.ac.il/2019/course/view.php?id=368448601"> Applications of Information Theory&nbsp; (Fall 19)</a></li>
 
-<li><a href="https://moodle.tau.ac.il/course/view.php?id=368415201"> Zero Knowledge Proofs (student seminar)&nbsp; (Fall 19)</a></li>
+<li><a href="https://moodle.tau.ac.il/2019/course/view.php?id=368415201"> Zero Knowledge Proofs (student seminar)&nbsp; (Fall 19)</a></li>
 
-<li><a href="http://moodle.tau.ac.il/course/view.php?id=368220001">Computational Models (Fall 19)</a></li>
+<li><a href="http://moodle.tau.ac.il/2019/course/view.php?id=368220001">Computational Models (Fall 19)</a></li>
 
 <li><a  href="http://moodle.tau.ac.il/2018/course/view.php?id=368416201">Foundation  of Cryptography, the Basics (Spring 19)</a></li>
 
 
 
- <li><a href="http://moodle.tau.ac.il/course/view.php?id=368419701"> Seminar on pseudorandomness (student seminar)&nbsp; (Fall 18)</a></li>
+ <li><a href="http://moodle.tau.ac.il/2018/course/view.php?id=368419701"> Seminar on pseudorandomness (student seminar)&nbsp; (Fall 18)</a></li>
 
 
 	
