--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@ The prizes are given for outstanding papers published in SIAM journals during th
 
 
 
-<li> <a href="https://itcrypto.github.io/2020.html">Conference on Information-Theoretic Cryptography (ITC) 2020</a></li>
+<li> <a href=https://www.itsoc.org/conferences/submit/information-theoretic-cryptography-itc-2020>Conference on Information-Theoretic Cryptography (ITC) 2020</a></li>
 
 
 <li> <a href="https://eurocrypt.iacr.org/2019/">Eurocrypt 2019</a></li>
