--- a/index.html
+++ b/index.html
@@ -1334,7 +1334,7 @@ one-way functions).</li>
 
 <li>
 <p>Iftach Haitner,   <a href="http://www.eecs.harvard.edu/%7Ealon/">Alon Rosen</a> and  <a href="http://www.cs.haifa.ac.il/%7Eronen/">Ronen Shaltiel</a><br>
- b>On the (Im)Possibility of Arthur-Merlin Witness Hiding Protocols</b><br>
+ <b> On the (Im)Possibility of Arthur-Merlin Witness Hiding Protocols</b><br>
 <span class=abslide>[abstract]</span> <a href="papers/WitnessHiding/WitnessHidingTCC.ppsx">[slides]</a>]<br>
 Theory of Cryptography Conference (TCC), 2009 <a href="papers/WitnessHiding/WitnessHidingLB.pdf">[pdf]</a>
 </p>
@@ -1567,7 +1567,7 @@ factor and reduces the seed length to <span class=blu2>Θ(n<sup>7</sup>)</span> 
 <li>
 <p>Iftach Haitner,  <a href="http://www.wisdom.weizmann.ac.il/%7Eharnik/"> Danny Harnik</a>
 and  <a href="http://www.wisdom.weizmann.ac.il/%7Ereingold/"> Omer Reingold</a><br>
-<b>On EfficientPseudorandom Generators from Exponentially Hard One-Way Functions</b><br>
+<b>On Efficient Pseudorandom Generators from Exponentially Hard One-Way Functions</b><br>
 <span class=abslide>[abstract]</span> <a href="papers/RandomizedIteate/PrgFromHard.pps">[slides]</a><br>
 International Colloquium on Automata, Languages and Programming - ICALP, 2006  <a href="papers/RandomizedIteate/PrgFromHard-ICALP.pdf">[pdf]</a><br>
 Full version is part of <a href="#RandIt">On the Power of the Randomized Iterate</a>
